--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "dev": "tsx --watch server.ts"
   },
   "dependencies": {
-    "fastify": "^5.5.0"
+    "@prisma/client": "^6.14.0",
+    "fastify": "^5.5.0",
+    "prisma": "^6.14.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
