--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@prisma/extension-optimize": "^2.0.0",
     "fastify": "^5.5.0",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
