--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@prisma/extension-optimize": "^2.0.0",
+    "bcrypt": "^6.0.0",
     "fastify": "^5.5.0",
     "prisma": "^6.14.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.3.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
