--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,5 +14,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node16"
-  }
+  },
+  "include": ["src", "prisma/client.ts"]
 }
