--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@prisma/extension-optimize": "^2.0.0",
     "bcrypt": "^6.0.0",
     "fastify": "^5.5.0",
+    "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
     "zod": "^4.1.1"
   },
