--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@prisma/extension-optimize": "^2.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "fastify": "^5.5.0",
+    "jsonwebtoken": "^9.0.2",
     "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
     "zod": "^4.1.1"
