--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,8 +52,10 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-resizable-panels": "^3.0.2",
+    "react-select": "^5.10.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "sweetalert2": "^11.22.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "vaul": "^1.1.2",
