--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "dev": "tsx --watch server.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@prisma/client": "^6.14.0",
     "@prisma/extension-optimize": "^2.0.0",
     "@types/jsonwebtoken": "^9.0.10",
