--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.3.0",
     "prisma": "^6.15.0",
