--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.15.0",
     "@prisma/extension-optimize": "^2.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "fastify": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
