--- a/backend/package.json
+++ b/backend/package.json
@@ -21,13 +21,14 @@
     "fastify": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "pino-pretty": "^13.1.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^6.0.0",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.3.1",
     "prisma": "^6.15.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
