add do seed.ts no tsconfig

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,5 +15,5 @@
     "skipLibCheck": true,
     "moduleResolution": "node16"
   },
-  "include": ["src", "prisma/client.ts"]
+  "include": ["src", "prisma/client.ts", "prisma/seed.ts"]
 }
