--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,32 @@
 services:
   db:
     image: "postgres:latest"
-    ports:
-      - 5432:5432
     container_name: db_oportune
     env_file:
       - .env.db.local
+
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - oportune_network
+    
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   backend:
     build: 
       context: ./backend
       dockerfile: Dockerfile
-
     container_name: backend_oportune
-    ports:
-      - 3001:3001
     env_file:
       - ./backend/.env
+    
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     
     networks:
       - oportune_network
@@ -31,15 +35,34 @@ services:
     build:
       context: ./email-service
       dockerfile: Dockerfile
-      
     container_name: go_service_oportune
-    ports:
-      - 3002:3002
     env_file:
       - ./email-service/.env
+          
+    networks:
+      - oportune_network
+  
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend_oportune
+    
+    networks:
+      - oportune_network
+
+  # Reverse Proxy
+  nginx:
+    image: nginx:alpine
+    container_name: nginx_oportune
+    ports:
+      - "8080:80"
+
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - backend
-
+      - frontend
     networks:
       - oportune_network
 
