--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,9 +4,24 @@ http {
   listen 80;
 
   location /api/ {
-    rewrite /api/(.*) /$1 break;
+    add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
 
-    proxy_pass http://backend:3001;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+
+    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;    
+    
+    if ($request_method = 'OPTIONS') {
+        return 204;
+    }
+
+    rewrite /api/(.*)$ /$1 break;
+
+    proxy_pass http://backend:3001;    
+    
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 
   location / {
