refactor: improve healthcheck and dependency management in docker-compose; update nginx configuration for better proxy handling

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,8 @@
 events {}
 
 http {
-  listen 80;
+  server {
+    listen 80;
 
   location /api/ {
     add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
@@ -11,7 +12,7 @@ http {
     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;    
     
     if ($request_method = 'OPTIONS') {
-        return 204;
+      return 204;
     }
 
     rewrite /api/(.*)$ /$1 break;
@@ -26,5 +27,10 @@ http {
 
   location / {
     proxy_pass http://frontend:80;
+    
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 };
