--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,36 +1,49 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
-  server {
-    listen 80;
-
-  location /api/ {
-    add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
-
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
-
-    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;    
+    upstream backend {
+        server backend_oportune:3001;
+    }
     
-    if ($request_method = 'OPTIONS') {
-      return 204;
+    upstream frontend {
+        server frontend_oportune:80;
     }
 
-    rewrite /api/(.*)$ /$1 break;
+    server {
+        listen 80;
+        server_name localhost;
 
-    proxy_pass http://backend:3001;    
-    
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+          # API rotas - proxy para backend
+        location /api/ {
+            # Handle CORS preflight
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Allow-Origin http://localhost:8080;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, PATCH, OPTIONS";
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+                add_header Access-Control-Max-Age 86400;
+                return 204;
+            }
 
-  location / {
-    proxy_pass http://frontend:80;
-    
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-};
+            # Remove /api e proxy para backend
+            rewrite ^/api/(.*)$ /$1 break;
+            proxy_pass http://backend;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Frontend rota
+        location / {
+            proxy_pass http://frontend;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+}
