--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: db_oportune
     env_file:
       - .env.db.local
+    ports:
+      - 5432:5432
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -16,7 +18,7 @@ services:
       dockerfile: Dockerfile
     container_name: backend_oportune
     env_file:
-      - ./backend/.env
+      - ./backend/.env.docker
     
     depends_on:
       - db
