--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,9 @@
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "eslint": "^9.35.0",
     "prisma": "^6.16.1",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
