--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - backend/**
+      - .github/workflows/ci.yml
 
 jobs:
   setup:
@@ -40,4 +43,4 @@ jobs:
         run: npm ci
 
       - name: Run ESLint
-        run: npx eslint .
+        run: npx eslint . --fix
