--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "dev": "tsx --watch server.ts",
     "start": "npx tsx server.ts",
     "prisma": "npx prisma generate && npx prisma db push",
-    "seed": " npx tsx prisma/seed.ts"
+    "seed": " npx tsx prisma/seed.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -32,12 +33,14 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.35.0",
     "globals": "^16.4.0",
     "jest": "^30.1.3",
     "prisma": "^6.16.1",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.2",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
