--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "start": "npx tsx server.ts",
     "prisma": "npx prisma generate && npx prisma db push",
     "seed": " npx tsx prisma/seed.ts",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -31,19 +31,18 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^6.0.0",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.35.0",
     "globals": "^16.4.0",
-    "jest": "^30.1.3",
     "prisma": "^6.16.1",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.2",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0"
+    "typescript-eslint": "^8.43.0",
+    "vitest": "^3.2.4"
   }
 }
