--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -3,27 +3,33 @@ name: CI
 on:
   push:
     branches:
-    - main
+      - main
     paths:
       - backend/**/*
   pull_request:
     branches:
-    - main
+      - main
     paths:
       - backend/**/*
 
 jobs:
   setup:
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        working-directory: ./backend
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       
-      - name: Set up Node.js
+      - name: Setup do Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '22'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
 
   lint:
     name: Lint Backend
@@ -32,16 +38,35 @@ jobs:
     defaults:
       run:
         working-directory: ./backend
-
     steps:
-      - name: inicio do lint
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      - name: Setup do Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '22'
-      
-      - name: Install dependencies
-        run: npm ci
+          cache: 'npm'
 
       - name: Run ESLint
-        run: npx eslint . --fix
+        run: npx eslint .
+
+  test:
+    name: Testes do Backend
+    needs: [setup, lint]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup do Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Run Tests
+        run: npm run test
