tentaviva de resolver o erro na ci do backend

--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -31,7 +31,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd backend 
+          npm install
 
   lint:
     name: Lint Backend
