--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -27,11 +27,6 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: |
-          cd backend 
-          npm install
-
   lint:
     name: Lint Backend
     needs: setup
@@ -48,6 +43,9 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run ESLint
         run: npx eslint .
@@ -68,6 +66,9 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run Tests
         run: npm run test
