--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,5 +17,5 @@
     "moduleResolution": "nodenext",
     "isolatedModules": true
   },
-  "include": ["src", "prisma/client.ts", "prisma/seed.ts","server.ts", "__tests__"]
+  "include": ["src", "prisma/client.ts", "prisma/seed.ts","server.ts", "__tests__", "vitest.config.ts", "eslint.config.ts"],
 }
