Quebrar o array include do tsconfig em várias linhas para melhorar a legibilidade Adicionar Prettier às dependências de desenvolvimento do backend
Refatorar o array include do tsconfig.json para legibilidade

Adicionar Prettier às dependências de desenvolvimento do backend

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,5 +17,13 @@
     "moduleResolution": "nodenext",
     "isolatedModules": true
   },
-  "include": ["src", "prisma/client.ts", "prisma/seed.ts","server.ts", "__tests__", "vitest.config.ts", "eslint.config.ts"],
+  "include": [
+    "src",
+    "prisma/client.ts",
+    "prisma/seed.ts",
+    "server.ts",
+    "__tests__",
+    "vitest.config.ts",
+    "eslint.config.ts"
+  ]
 }
