--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.35.0",
     "globals": "^16.4.0",
+    "prettier": "^3.6.2",
     "prisma": "^6.16.1",
     "supertest": "^7.1.4",
     "tsx": "^4.20.4",
