--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
     "jwt-decode": "^4.0.0",
+    "lottie": "^0.0.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
