--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "start": "npx tsx server.ts",
     "prisma": "npx prisma generate && npx prisma db push",
     "seed": " npx tsx prisma/seed.ts",
+    "format": "prettier --write .",
     "test": "vitest"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.35.0",
     "globals": "^16.4.0",
+    "prettier": "^3.6.2",
     "prisma": "^6.16.1",
     "supertest": "^7.1.4",
     "tsx": "^4.20.4",
