--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,9 @@
     "lottie": "^0.0.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
-    "react": "19.1.0",
+    "react": "^19.2.0",
     "react-day-picker": "^9.11.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.64.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
